--- a/app-three/src/App.css
+++ b/app-three/src/App.css
@@ -45,6 +45,7 @@
 
 .back-button-container a {
   text-decoration: none;
+  font-family: Arial, Helvetica, sans-serif;
   font-weight: 700;
   color: #111;
 }
